# pemex_contrataciones

./: LICENSE  README.md  pyproject.toml
data/processed/: lista_empresas_sancionadas.csv
data/raw/: Consulta_tipo_de_cambio_20200527-164318521.csv
scripts/: calcular_features.py  calcular_score_riesgo.py  descargar_info_siscep.py  descargar_lista_empresas_sancionadas.py  features_raw.py
src/pemex_contratos/: __init__.py  features.py  load_data_proveedores.py  preprocess.py  visualization.py
src/pemex_contratos/inai/: features_contrato.py  features_proveedor.py
