[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pemex_contratos"
author = "Raul Peralta"
author-email = "raulpl25@gmail.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">=3.8"
requires = [
    "gazpacho==0.9.1",
    "helium==3.0.2",
    "joblib",
    "numpy==1.18.1",
    "pandas==1.0.3",
    "requests",
    "xlrd==1.2.0",
]


[tool.flit.metadata.requires-extra]
test = ["pytest"]
